fix: modals overflow-x fixed

--- a/src/styles/components/modal.css
+++ b/src/styles/components/modal.css
@@ -10,6 +10,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  overflow-x: hidden;
   overflow-y: auto;
   padding: var(--m__modal-padding);
 
